# py_weather_stats

./: .gitignore  pyproject.toml  requirements.txt
src/weather_stats/: app.py  weather_data.py
weather_stats/: app.py  weather_data.py
