[tool.poetry]
name = "weather_stats"
version = "0.1.0"
description = ""
authors = ["Lukas Muessle"]
license = "MIT"
packages = [{ include = "weather_stats", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.0.0"
pandas = "^1.3.4"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
